@@ -9,11 +9,11 @@
 	###########################################################################
 	# English strings for Mantis
 	# -------------------------------------------------
-	# $Revision: 1.79 $
-	# $Author: jfitzell $
-	# $Date: 2002-08-27 10:08:09 $
+	# $Revision: 1.80 $
+	# $Author: vboctor $
+	# $Date: 2002-08-27 12:44:10 $
 	#
-	# $Id: strings_english.txt,v 1.79 2002-08-27 10:08:09 jfitzell Exp $
+	# $Id: strings_english.txt,v 1.80 2002-08-27 12:44:10 vboctor Exp $
 	###########################################################################
 ?>
 <?php
@@ -771,6 +771,7 @@
 	$s_reopen_bug_button = 'Reopen Bug';
 	$s_attached_files = 'Attached Files';
 	$s_publish = 'Publish';
+	$s_cached = 'Cached';
 
 	# view_bug_inc.php
 
