@@ -121,6 +121,7 @@ Mantis ChangeLog
  * Make db_result() and db_fetch_array() return data with slashes stripped
  * Added authentication_api.php
  * Removed proj_user_api.php
+ * Added obsolete.php that checks for obsolete variables.
 
 2002.08.23  -  0.17.5
  * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
